tests/NormalTests/paczka1/fuzzy1/58885087.err
Error in line 2: IDkjlPMxMY A299 78,6
Error in line 9: pAif2 S778 53,8
Error in line 16: O6yKO S762 38,8
Error in line 21: IVjeHkRB0mS S778 16,7
Error in line 22: IVjeHkRB0mS S762 168,8
Error in line 30: IVjeHkRB0mS S715 43,8
